--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Project</span><span class="bg-text">My Work</span></h2>
+                <h2>My <span>Project</span><span class="bg-text">My Project</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done in various programming languages.
