--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                  
                     </p>
                     <div class="btn-con">
-                        <a href="https://github.com/Sailza/RESUME/blob/main/CDC%20RESUME%202.pdf" class="main-btn">
-                            <span class="btn-text">Hire Me</span>
-                            <span class="btn-icon"><i class="fas fa-paper-plane me-2"></i></span>
+                        <a href="https://github.com/Sailza/RESUME/blob/main/skres.pdf" class="main-btn">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
                     </div>
                 </div>
