--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                  
                     </p>
                     <div class="btn-con">
-                        <a href="https://github.com/Sailza/RESUME/blob/main/skres.pdf" class="main-btn">
+                        <a href="https://tinyurl.com/Sailza-resume" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -537,7 +537,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                 <a href="https://github.com/Sailza/RESUME/blob/main/skres.pdf" class="main-btn">
+                                 <a href="https://tinyurl.com/Sailza-resume" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a><br>
